--- a/gallery.html
+++ b/gallery.html
@@ -28,6 +28,14 @@
 <div style="text-align:center">
 <h1><p style="font-family: "Times New Roman">GALLERY</p></h1>
 
+<p> 
+    <div style="text-align:center">
+    <audio controls>
+                <source src="audio/Lofi Dream.m4a" type="audio/ogg">
+                <source src="audio/Lofi Dream.m4a" type="audio/mpeg">
+    </audio>
+</p>
+
 <style>
     * {
         box-sizing: border-box;
