--- a/home.html
+++ b/home.html
@@ -24,19 +24,22 @@
 	<a href="contact.html"target="_self">CONTACT</a>
       </div>
 
-<p> 
-    <div style="text-align:center">
-    <audio controls>
-                <source src="audio/Lofi Dream.m4a" type="audio/ogg">
-                <source src="audio/Lofi Dream.m4a" type="audio/mpeg">
-    </audio>
-</p>
-
 <img src="images/ZAHIRAH ZULKEFLI.png" width="100%">
-
 
 </body>
 </html>
+
+<p>Title: My Resume
+<p>Name: Zahirah binti Zulkefli
+<p>Student ID: 2022497832
+<p>Group: Elek D
+<p>Course Code: IMS456
+<p>Course Name: Basic Web Design and Content Management
+<p>Program Code: CDIM246
+<p>Faculty: College of Computing, Informatics and Mathematics
+<p>Submission Date: 17 December 2023
+<p>Published URL: <a href="https://zahirahzulkefli.github.io/myresume/home.html">https://zahirahzulkefli.github.io/myresume/home.html</a>
+</p>
 
 <br>
 <meta charset="utf-8">
